# opencv-gdnative

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Reproduce.md  SConstruct  example-opencv-dependency.txt  set64.cmd
Godot/: Label.gd  main.gd  main.tscn  project.godot
src/: gdexample.cpp  gdexample.h
